# napari-cziviewer

./: .gitignore  README.md  setup.cfg
napari_cziviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/napari_cziviewer/: Tester.ipynb  __cziviewer.py  __init__.py  _cziviewer.py  _widget.py  napari.yaml
src/napari_cziviewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
